--- a/debian/rules
+++ b/debian/rules
@@ -1,22 +1,23 @@
 #!/usr/bin/make -f
 
+build: build-stamp
+build-stamp:
+	./configure
+	make
+	touch build-stamp
 
-BUILD_ROOT=$(CURDIR)/debian/tmp
-install:
-trm -rf ${BUILD_ROOT}
-tmkdir -p ${BUILD_ROOT}/var/opencore/modules/ApacheForward.module
-tmkdir -p ${BUILD_ROOT}/var/opencore/conf/staging/ApacheForward
-tmkdir -p ${BUILD_ROOT}/var/www
-tinstall -m 755 action ${BUILD_ROOT}/var/opencore/modules/ApacheForward.module/
-tcp module.xml *.html ${BUILD_ROOT}/var/opencore/modules/ApacheForward.module/
-tinstall -m 755 verify ${BUILD_ROOT}/var/opencore/modules/ApacheForward.module/
+install: install-stamp
+install-stamp: build-stamp
+	dh_testdir
+	dh_testroot
+	dh_installdirs
+	install -m 755 action debian/openpanel-mod-apacheforward/var/opencore/modules/ApacheForward.module/
+	cp module.xml *.html debian/openpanel-mod-apacheforward/var/opencore/modules/ApacheForward.module/
+	install -m 755 verify debian/openpanel-mod-apacheforward/var/opencore/modules/ApacheForward.module/
 
-build:
-t./configure
-tmake
-binary-indep:
+binary-indep: build install
 
-binary-arch binary: build install
+binary-arch: build install
 	if [ -d debian/tmp ] ; then dh_install -a --sourcedir=debian/tmp ; fi
 	dh_installdocs -a
 	dh_installdeb -a
@@ -26,5 +27,12 @@ binary-arch binary: build install
 	dh_gencontrol -a
 	dh_md5sums -a
 	dh_builddeb -a
+
+binary: binary-arch binary-indep
+
+clean:
+	rm -f build-stamp install-stamp
+	[ ! -f makeinclude ] || make clean
+	dh_clean
 
 .PHONY: build binary binary-arch binary-indep clean install
