--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,8 @@
 Source: openpanel-mod-apacheforward
 Section: misc
 Priority: optional
-Maintainer: OpenPanel packager <packages@openpanel.com
-Build-Depends: debhelper (>= 5)
+Maintainer: OpenPanel packager <packages@openpanel.com>
+Build-Depends: debhelper (>= 5), openpanel-dev
 Standards-Version: 3.7.2
 
 Package: openpanel-mod-apacheforward
