--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 3.7.2
 Package: openpanel-mod-apacheforward
 Architecture: any
 Pre-Depends: openpanel-core, openpanel-authd
-Depends: openpanel-core (>= 0.8.3), openpanel-mod-user, openpanel-mod-domain, openpanel-mod-apache2, ${shlibs:Depends}, ${misc:Depends}
+Depends: openpanel-core (>= 1.1), openpanel-mod-user (>= 1.1), openpanel-mod-domain (>= 1.1), openpanel-mod-apache2 (>= 1.1), ${shlibs:Depends}, ${misc:Depends}
 Description: OpenPanel module to configure website forwarding
  Configure the apache2 webserver for http redirects / framed forwards
  Openpanel website forwarding module
